2011-12-26  Josef Reidinger  <jreidinger@suse.com>  (tiny change)

	* src/components.cc: add missing return in functions returning
	non-void.

2011-09-20  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/epd.c: extend maximum file name length of EPD
	files to 127 characters for the load and loadepd commands.

2011-09-07  Antonio Ceballos  <aceballos@gmail.com>

	* src/components.cc: fix race condition.
	* configure.ac: version 6.0.1
	* NEWS: changes in version 6.0.1
	* INSTALL: remove info not related to installation

2011-08-20  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: fix program crash for solveepd with st 30.
	* src/frontend/engine.c: allow kibitz for solve command.

2011-07-31  Antonio Ceballos  <aceballos@gmail.com>

	* doc/gnuchess.texi: 'book.dat' replaced by 'book.bin'.

2011-07-30  Antonio Ceballos  <aceballos@gmail.com>

	* INSTALL: 'cd src' before './gnuchess'

2011-07-30  Antonio Ceballos  <aceballos@gmail.com>

	* src/components.cc: if gnuchess.ini is not found, report error
	before prompt.
	* src/adapter/main.cpp: if gnuchess.ini is not found, report error
	before prompt.
	* TODO: if gnuchess.ini is not found, report error before prompt.

2011-07-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: after 'book on', open the book.

2011-06-23  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/adapter.cpp: use strlen instead of sizeof to get
	length of book file name.

2011-05-02  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/common.h: remove declarations of unused functions 
	and variables.
	* src/frontend/cmd.c: remove initialization of unused variable,
	* src/frontend/init.c: remove unused functions.
	* src/main.cc: remove unused variables.

2011-04-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/Makefile.am: remove unused code: ttable.c
	* src/frontend/ttable.c: remove unused file.
	* src/frontend/common.h: remove declarations of functions defined